samples/_failures_safe/1761695875_ab144f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe7493d0.c: In function ‘main’:
./samples/SAFE/__tmp_fe7493d0.c:161:5: error: expected expression at end of input
  161 |     if (fgets(input, sizeof(input), stdin))
      |     ^~
./samples/SAFE/__tmp_fe7493d0.c:161:5: error: expected declaration or statement at end of input
